# rules_yq

./: BUILD.bazel  README.md  WORKSPACE
.github/workflows/: example.yml  update.yml
example/: BUILD.bazel  values.yaml
script/: fetch-yq-checksum.bash
yq/: BUILD.bazel  README.md  def.bzl  default.bzl  replace.bash  replace.bat  replace.v4.bash  toolchain.bzl
