filegroup(
    name = "all",
    srcs = glob(["*"]),
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "replace.bash",
        "replace.bat",
    ],
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "toolchain",
    visibility = ["//visibility:public"],
)

load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "docs",
    input = "def.bzl",
    out = "README.md",
)
